<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@color/bg_color"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="@dimen/_15sdp">
        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:hint="@string/name"
            android:background="@drawable/auth_edit_text_bg"
            android:padding="@dimen/_10sdp"
            android:inputType="text" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:hint="@string/email_domain_com"
            android:background="@drawable/auth_edit_text_bg"
            android:padding="@dimen/_10sdp"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:hint="@string/phone"
            android:background="@drawable/auth_edit_text_bg"
            android:padding="@dimen/_10sdp"
            android:inputType="phone" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:hint="@string/password"
            android:background="@drawable/auth_edit_text_bg"
            android:padding="@dimen/_10sdp"
            android:inputType="numberPassword" />

        <!--<EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:hint="password"
            android:background="@drawable/auth_edit_text_bg"
            android:padding="@dimen/_10sdp"
            android:inputType="numberPassword" />-->

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignup"
            android:elevation="@dimen/_15sdp"
            android:padding="@dimen/_10sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_15sdp"
            android:text="@string/sign_up_for_free" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/you_already_have_an_account" />

            <View
                android:layout_width="@dimen/_10sdp"
                android:layout_height="0dp" />

            <TextView
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:padding="@dimen/_10sdp"
                android:text="@string/login"
                android:textColor="@color/p_text" />

        </LinearLayout>

    </LinearLayout>
</layout>