<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_color"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/layout_padding">

            <ImageView
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="?selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/app_name"
                android:focusable="true"
                android:src="@drawable/ic_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                android:text="@string/welcome_to_your" />

            <TextView
                android:id="@+id/tvUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/primary"
                android:text="@string/your_posts_page" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/btnMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:background="?selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/app_name"
                android:focusable="true"
                android:src="@drawable/ic_more" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/s_text"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="@color/edit_text_bg_color"
                android:backgroundTint="@color/line_bold_color" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/layout_padding"
                android:layout_marginVertical="@dimen/_10sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:src="@mipmap/ic_launcher"
                    app:riv_corner_radius="@dimen/_40sdp" />


                <EditText
                    android:id="@+id/etPostContent"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:background="@drawable/et_add_post"
                    android:hint="@string/what_s_on_your_mind"
                    android:importantForAutofill="yes"
                    android:inputType="text"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:paddingVertical="@dimen/_5sdp"
                    android:singleLine="true" />

                <RelativeLayout
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp">
                    <ImageView
                        android:id="@+id/btn_post"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        android:clickable="true"
                        android:layout_centerInParent="true"
                        android:contentDescription="@string/app_name"
                        android:focusable="true"
                        android:padding="@dimen/_5sdp"
                        android:src="@drawable/ic_send" />
                    <ProgressBar
                        android:id="@+id/progressSend"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:visibility="gone" />
                </RelativeLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="@color/edit_text_bg_color"
                android:backgroundTint="@color/line_bold_color" />
        </LinearLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefresh"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvPosts"
                    android:paddingVertical="@dimen/_5sdp"
                    android:clipToPadding="false"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    tools:itemCount="10"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:layout_centerInParent="true"
                    tools:listitem="@layout/item_post" />

                <TextView
                    android:id="@+id/tvEmptyList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:layout_centerInParent="true"
                    android:visibility="gone"
                    android:text="Empty List\nyou can add a new post !" />

                <ProgressBar
                    android:id="@+id/progressRecycler"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_centerInParent="true" />

            </RelativeLayout>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </LinearLayout>
</layout>