<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingVertical="@dimen/layout_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/section_bg"
            android:orientation="vertical"
            android:padding="@dimen/layout_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/domain"
                    android:textAllCaps="true" />

                <TextView
                    android:id="@+id/tvDomain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    tools:text="@string/domain" />

                <ImageView
                    android:id="@+id/btnEditDomain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/ic_edit" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/domainEditSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone">

                <EditText
                    android:id="@+id/etDomain"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/auth_edit_text_bg_2"
                    android:hint="@string/domain"
                    android:padding="@dimen/_10sdp" />

                <ImageView
                    android:id="@+id/btnSetDomain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:contentDescription="@string/app_name"
                    android:focusable="true"
                    android:src="@drawable/ic_done" />
            </LinearLayout>

        </LinearLayout>

        <include layout="@layout/divider"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/section_bg"
            android:orientation="vertical"
            android:padding="@dimen/layout_padding">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/port"
                    android:textAllCaps="true" />

                <TextView
                    android:id="@+id/tvPort"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    tools:text="@string/port" />

                <ImageView
                    android:id="@+id/btnEditPort"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/ic_edit" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/portEditSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone">

                <EditText
                    android:id="@+id/etPort"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/auth_edit_text_bg_2"
                    android:hint="@string/port"
                    android:padding="@dimen/_10sdp"
                    android:visibility="visible" />

                <ImageView
                    android:id="@+id/btnSetPort"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:contentDescription="@string/app_name"
                    android:focusable="true"
                    android:src="@drawable/ic_done" />

            </LinearLayout>

        </LinearLayout>

        <include layout="@layout/divider"/>


    </LinearLayout>

</layout>